# rules_wix

./: MODULE.bazel  README.md  WORKSPACE  defs.bzl  deps.bzl  rules.bzl
.github/workflows/: windows.yml
example/: BUILD  example.wxs
