module(name = "mjbots_rules_wix")

bazel_dep(name = "bazel_skylib", version = "1.7.1")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "com_github_wixtoolset_wix3",
    urls = ["https://github.com/wixtoolset/wix3/releases/download/wix3141rtm/wix314-binaries.zip"],
    integrity = "sha256-asgk4WQtb3J30O1+oJQRpQj2EWum+uCqXyx9qi/0PTE=",
    build_file = "//:wix3.BUILD",
)